<resources>
    <string name="app_name" translatable="false">BuLi Live</string>
    <string name="infoSubheading">Team infos:</string>
    <string name="teamImageDescription">Image of the Team Badge</string>
    <string name="stadiumHeadline"><u>Home Stadium:</u></string>
    <string name="capacityHeadline"><u>Stadium capacity:</u></string>
    <string name="foundedHeadline"><u>Founded in:</u></string>
    <string name="iconFacebookDescription" translatable="false">Facebook Icon</string>
    <string name="iconTwitterDescription" translatable="false">Twitter Icon</string>
    <string name="iconInstagramDescription" translatable="false">Instagram Icon</string>
    <string name="descriptionSubheading">Team Description:</string>
    <string name="toolsDescription" translatable="false">Ballspielverein Borussia 09 e.V. Dortmund, commonly known as Borussia Dortmund , Dortmund, or BVB, is a German sports team based in Dortmund, North Rhine-Westphalia. The football team is part of a large membership-based sports team with 100,000 members, making BVB the third largest sports team by membership in Germany. Dortmund plays in the Bundesliga, the top tier of the German football league system. Dortmund is one of the most successful teams in German football history.\r\n\r\nBorussia Dortmund was founded in 1909 by seventeen football players from Dortmund. Borussia Dortmund have won eight German championships, three DFB-Pokals, five DFL-Supercups, one UEFA Champions League, one UEFA Cup Winners\' Cup, and one Intercontinental Cup. Their Cup Winners\' Cup win in 1966 made them the first German team to win a European title.\r\n\r\nSince 1974, Dortmund have played their home games at Westfalenstadion. The stadium is the biggest stadium in Germany. Dortmund has the highest average attendance of any Association football team in the world. Borussia Dortmund\'s colours are black and yellow, giving the team its nickname die Schwarzgelben. Dortmund holds a long-standing rivalry with Ruhr neighbours Schalke, known as the Revierderby. Dortmund also has a rivalry with Bayern Munich. In terms of Deloitte\'s annual Football Money League, Dortmund is the second biggest sports team in Germany and the eleventh biggest football team in the world.</string>
    <string name="stadiumImageDescription">Image of the Team Stadium</string>
    <string name="title_activity_overview">Overview</string>
    <string name="tab_text_1">Table</string>
    <string name="tab_text_2">Next events</string>
    <string name="tab_text_3">My bets</string>
    <string name="apiResponseError">Error! The API is not responding. Please try again now or later!</string>
    <string name="apiErrorOnFailure">Error! Please check your Internet and try again or contact the support!</string>
    <string name="getExtraError">An Error Occurred! Please go back and try again!</string>
    <string name="noDescription">There is no description provided by the API</string>
    <string name="eventDate">Date:</string>
    <string name="eventLocation">Location:</string>
    <string name="eventLeague">League:</string>
    <string name="eventRound">Round:</string>
    <string name="newsText">Latest match results</string>
    <string name="bundesligaButtonText">To the Bundesliga</string>
    <string name="moreIcon">More options </string>
    <string name="aboutIcon">Infos about the app</string>
    <string name="bugIcon">Report a bug</string>
    <string name="bugListIcon">Bug list</string>
    <string name="nightModeIcon">Toggle night mode on/off</string>
    <string name="errorNoMailClients">There are no mail clients installed!</string>
    <string name="toastAbout"><b>About this App:</b>\n\n<u>App creator:</u>\n\t- André Bautz\n\t- Tim-Loris Deinert\n\t- Jan Stippe\n\n<u>Version:</u> v.1.0</string>
    <string name="modeNightText">Change to day mode</string>
    <string name="modeDayText">Change to night mode</string>
    <string name="toastModeChangedDay">Changed app theme to day mode</string>
    <string name="toastModeChangedNight">Changed app theme to night mode</string>
    <string name="toastBugList">There are no bugs in this app, just features 😉</string>
    <string name="tableWinsText">Wins: %d</string>
    <string name="tableDrawText">Draws: %d</string>
    <string name="tableLossText">Losses: %d</string>
    <string name="saveBet">Save bet</string>
    <string name="noBets">There currently are no bets.</string>
    <string name="emptyEditText">Please fill in the textboxes.</string>
    <string name="betSaved">Bet was saved.</string>
    <string name="eventScoreSpacer" translatable="false">:</string>
    <string name="betPlaceholder" translatable="false">\?</string>
    <string name="betCorrectDescription">Image that shows that the bet for this team is correct.</string>
    <string name="betIncorrectDescription">Image that shows that the bet for this team is incorrect.</string>
</resources>