<?xml version="1.0" encoding="utf-8"?>
<!--author: Tim-Loris Deinert-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainMenu">
    <item
        android:id="@+id/menuItemMore"
        android:icon="@drawable/ic_menu_icon_more"
        android:title="@string/moreIcon"
        app:tooltipText="@string/moreIcon"
        app:showAsAction="always">
        <!-- submenu -->
        <menu>
            <item
                android:id="@+id/menuItemAbout"
                android:title="@string/aboutIcon"
                android:icon="@drawable/ic_menu_icon_about"
                app:iconTint="@color/black"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/menuItemDisplayMode"
                android:title="@string/modeDayText"
                android:icon="@drawable/ic_menu_icon_night"
                app:iconTint="@color/black"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/menuItemBugReport"
                android:title="@string/bugIcon"
                android:icon="@drawable/ic_menu_icon_bug"
                app:iconTint="@color/black"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/menuItemBugList"
                android:title="@string/bugListIcon"
                android:icon="@drawable/ic_menu_icon_list"
                app:iconTint="@color/black"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>