<?xml version="1.0" encoding="utf-8"?>
<!-- author: Jan Stippe -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EventActivity">

        <ProgressBar
            android:id="@+id/eventProgressSpinner"
            style="@style/ProgressBarStyle"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/eventGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="eventHeadline,eventImageHomeTeam,eventImageAwayTeam,eventHorizontalSpacer,eventDateTitle,eventLocationTitle,eventLeagueTitle,eventRoundTitle,eventDate,eventLocation,eventLeague,eventRound"/>

        <TextView
            android:id="@+id/eventHeadline"
            style="@style/Headline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Team A vs Team B"/>

        <ImageView
            android:id="@+id/eventImageHomeTeam"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:maxHeight="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@+id/eventHeadline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/eventResult"
            android:contentDescription="@string/teamImageDescription"/>

        <TextView
            android:id="@+id/eventResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@+id/eventImageHomeTeam"
            app:layout_constraintStart_toEndOf="@+id/eventImageHomeTeam"
            app:layout_constraintEnd_toStartOf="@+id/eventImageAwayTeam"
            app:layout_constraintBottom_toBottomOf="@+id/eventImageHomeTeam"
            tools:text="1 : 2"/>

        <ImageView
            android:id="@+id/eventImageAwayTeam"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:maxHeight="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@+id/eventImageHomeTeam"
            app:layout_constraintStart_toEndOf="@+id/eventResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/eventImageHomeTeam"
            android:contentDescription="@string/teamImageDescription"/>

        <View
            android:id="@+id/eventHorizontalSpacer"
            style="@style/Spacer"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintTop_toBottomOf="@id/eventImageHomeTeam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/eventDateTitle"/>

        <TextView
            android:id="@+id/eventDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            style="@style/Subheading"
            app:layout_constraintTop_toBottomOf="@+id/eventHorizontalSpacer"
            app:layout_constraintStart_toStartOf="@id/eventImageHomeTeam"
            android:text="@string/eventDate"/>

        <TextView
            android:id="@+id/eventLocationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Subheading"
            app:layout_constraintTop_toBottomOf="@+id/eventDateTitle"
            app:layout_constraintStart_toStartOf="@+id/eventImageHomeTeam"
            android:text="@string/eventLocation"/>

        <TextView
            android:id="@+id/eventLeagueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Subheading"
            app:layout_constraintTop_toBottomOf="@+id/eventLocationTitle"
            app:layout_constraintStart_toStartOf="@id/eventImageHomeTeam"
            android:text="@string/eventLeague"/>

        <TextView
            android:id="@+id/eventRoundTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            style="@style/Subheading"
            app:layout_constraintTop_toBottomOf="@+id/eventLeagueTitle"
            app:layout_constraintStart_toStartOf="@id/eventImageHomeTeam"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/eventRound"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/eventGuidelineVertical_40_percent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4"/>

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/eventDateTitle"
            app:layout_constraintStart_toEndOf="@id/eventGuidelineVertical_40_percent"
            app:layout_constraintBottom_toBottomOf="@+id/eventDateTitle"/>

        <TextView
            android:id="@+id/eventLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/eventLocationTitle"
            app:layout_constraintStart_toEndOf="@id/eventGuidelineVertical_40_percent"
            app:layout_constraintBottom_toBottomOf="@+id/eventLocationTitle"/>

        <TextView
            android:id="@+id/eventLeague"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/eventLeagueTitle"
            app:layout_constraintStart_toEndOf="@id/eventGuidelineVertical_40_percent"
            app:layout_constraintBottom_toBottomOf="@+id/eventLeagueTitle"/>

        <TextView
            android:id="@+id/eventRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/eventRoundTitle"
            app:layout_constraintStart_toEndOf="@id/eventGuidelineVertical_40_percent"
            app:layout_constraintBottom_toBottomOf="@+id/eventRoundTitle"/>

        <TextView
            android:id="@+id/eventErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Error"
            android:visibility="invisible"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>